--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
 
 
-  <h1>Well Met in Springtime</h1>
+  <h1>Well Met in Midsummer</h1>
 <img src="image/lantern.png" class="lantern"><p>Grab the lantern. Enter a shady copse of MIDI, a veritable forest overgrown with digitally-produced sounds. These small files <a href="https://fabled.day/before/">were once</a> common on all sorts of independent websites. Now? You rarely see them <em>anywhere</em>. In fact, many sites disallow sharing them, and some browsers now find it difficult to play them. Welcome, for better or worse, to the MIDI Forest.</p>
 
 <p>MIDI itself stands for <em>musical instrument digital interface</em>. This American-Japanese file format developed in the 1980s as a way to help machines understand musical instruments. Rather than transmitting actual audio, MIDI sends <em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression (e.g., pitch bend, vibrato, sustain pedal).This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
