--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
 <p>MIDI created a universal language that allowed keyboards, synthesizers, drum machines, and digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p>
 
-<p>Today, MIDI is <em>still</em> a core part of modern music technology, even if it has fallen out of favor on the World Wide Web. At its core, MIDI remains precise, language-like system for telling machines <em>how</em> to think about music, not <em>“what”</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from! And any instrument can interpret it, in infinite ways.</p>
+<p>Today, MIDI is <em>still</em> a core part of modern music technology, even if it has fallen out of favor on the World Wide Web. At its core, MIDI is a language-like system for telling machines <em>how</em> to think about music, not <em>“what”</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from! And any instrument can interpret it, in infinite ways.</p>
 
 <p>The green grove you now enter is a testimony to the ubiquity of MIDI in times past, as is the general aesthetic ambiance it partakes of. Websites in the <a href="https://fabled.day/before/">Before Times</a> often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser…</p>
   <h2>Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute2">
@@ -62,7 +62,7 @@
   
   <div id="midicontainer"><h4>Canyon.MID</h4>
   <midi-player 
-  src="https://files.catbox.moe/8j9fxz.mid"
+  src="/tunes/canyon.mid"
   sound-font visualizer="#myPianoRollVisualizer">
 </midi-player></div>
 
