--- a/public/index.html
+++ b/public/index.html
@@ -66,23 +66,19 @@
   sound-font visualizer="#myPianoRollVisualizer">
 </midi-player></div>
 
+<p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood, all of which are thankfully now preserved on the Web. Check out these absolute bangers! You can download them all in<a href="/tunes/highlights/highlights.zip"> zip format here</a> or click through them each...</p>
 
-<p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood, all of which are thankfully now preserved on the Web. Check out these absolute bangers! You can download them all in zip format below, or click through them each above and listen one by one…</p>
+<ul>
+	<li><a href="/tunes/highlights/canyon.mid">Canyon.MID</a></li>
+	<li><a href="/tunes/highlights/town.mid">Town.MID</a></li>
+	<li><a href="/tunes/highlights/trains.mid">Trains.MID</a></li>
+	<li><a href="/tunes/highlights/daisy.mid">Daisy.MID</a></li>
+	<li><a href="/tunes/highlights/flourish.mid">Flourish.MID</a></li>
+	<li><a href="onestop.mid">OneStop.MID</a></li>
+	<li><a href="passport.mid">Passport.MID</a></li>
+</ul>
 
 
-
-
-  <ol>
-	<li>Canyon.MID</li>
-	<li>Town.MID</li>
-	<li>Trains.MID</li>
-	<li>Daisy.MID</li>
-	<li>Flourish.MID</li>
-	<li>OneStop.MID</li>
-	<li>Passport.MID</li>
-</ol>
-
-Download all these <em>total legends</em> above individually, or in one convenient package here today...
 
 
 
@@ -90,7 +86,7 @@ Download all these <em>total legends</em> above individually, or in one convenie
 
 <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
 
-<p>Wondering how I managed to play <em>.MID</em> files in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub.</p>
+<p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub.</p>
 
 
 </article>
