--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 
 <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
 
-<p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub.</p>
+<p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
 
 
 </article>
