--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
 	<li><a href="/tunes/highlights/trains.mid">Trains.MID</a></li>
 	<li><a href="/tunes/highlights/daisy.mid">Daisy.MID</a></li>
 	<li><a href="/tunes/highlights/flourish.mid">Flourish.MID</a></li>
-	<li><a href="onestop.mid">OneStop.MID</a></li>
-	<li><a href="passport.mid">Passport.MID</a></li>
+	<li><a href="/tunes/highlights/onestop.mid">OneStop.MID</a></li>
+	<li><a href="/tunes/highlights/passport.mid">Passport.MID</a></li>
 </ul>
 
 
