--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
   
   <div id="midicontainer"><h4>Canyon.MID</h4>
   <midi-player 
-  src="/tunes/canyon.mid"
+  src="/tunes/highlights/canyon.mid"
   sound-font visualizer="#myPianoRollVisualizer">
 </midi-player></div>
 
