--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,12 @@
   sound-font visualizer="#myPianoRollVisualizer">
 </midi-player></div>
 
-<p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood, all of which are thankfully now preserved on the Web. Check out these absolute bangers! You can download them all in<a href="/tunes/highlights/highlights.zip"> zip format here</a> or click through them each...</p>
+<p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood. <em>Canyon.MID</em>, for example, also known as “Trip Through the Grand Canyon,” was composed by George Stone to promote a now-defunct media application called Passport Designs.</p>
+
+<p>I never used the latter, but listened to the the former constantly, alongside many of the other <em>.MID</em> files available on my operating system for free, as a child. These included one simply called <em>Passport.MID</em>, too, all of which are thankfully now preserved on the Web. Check out these absolute bangers, which you can download as a <a href="/tunes/highlights/highlights.zip">zipped collection here</a> or one by one below! </p>
+
+
+
 
 <ul>
 	<li><a href="/tunes/highlights/canyon.mid">Canyon.MID</a></li>
