--- a/public/index.html
+++ b/public/index.html
@@ -47,15 +47,24 @@
 
 
   <h1>Well Met in Midsummer</h1>
-<img src="image/lantern.png" class="lantern"><p>Grab the lantern. Enter a shady copse of MIDI, a veritable forest overgrown with digitally-produced sounds. These small files <a href="https://fabled.day/before/">were once</a> common on all sorts of independent websites. Now? You rarely see them <em>anywhere</em>. In fact, many sites disallow sharing them, and some browsers now find it difficult to play them. Welcome, for better or worse, to the MIDI Forest.</p>
+<img src="image/lantern.png" class="lantern"><p>Grab the lantern!</p><p>Enter the mystic, shady green forest of MIDI, overgrown with digitally-produced sounds. These wondrous little musical files adorned the independent websites of the 1990s and 2000s. Typing the shiny HTML tag <em>&lt;bgsound src=“url.mid”&gt;</em> would, <a href="https://midis.fandom.com/wiki/Bgsound_(Website_BGM)">in earlier browsers</a>, play a MIDI file in the background of a webpage directly. Even as Napster and MP3s gained speed, sites still existed for trading MIDI files, and I remember seeing them well into the 2000s.</p>
 
-<p>MIDI itself stands for <em>musical instrument digital interface</em>. This American-Japanese file format developed in the 1980s as a way to help machines understand musical instruments. Rather than transmitting actual audio, MIDI sends <em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression (e.g., pitch bend, vibrato, sustain pedal).This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
+<p>Now? You rarely see anything about them <em>anywhere</em> unless you go looking for them. In fact, many sites <em>disallow</em> sharing them, and some browsers now find it difficult to play them. I’m not quite sure why this happened, being fuzzy on the particularities but heavily nostalgic about the MIDI files themselves. </p>
 
-<p>MIDI created a universal language that allowed keyboards, synthesizers, drum machines, and digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p>
+<p>Anyways, fair travelers… I’m going to be doing what I can to make these eerie, awkward musical entities available to you here, though. Lit by the glow of wizardly spells and moonrise over America Online’s ghostly ruins… Welcome, my dear musical seekers, to the MIDI Forest.</p>
 
-<p>Today, MIDI is <em>still</em> a core part of modern music technology, even if it has fallen out of favor on the World Wide Web. At its core, MIDI is a language-like system for telling machines <em>how</em> to think about music, not <em>“what”</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from! And any instrument can interpret it, in infinite ways.</p>
+<p>MIDI itself stands for <em>musical instrument digital interface</em>. This American-Japanese file format developed in the 1980s as a way to help computers understand music. It’s usually credited to Dave Smith at Sequential Circuits and Ikutaro Kakehashi at Roland, with the first specification finalized at a trade show demonstration in January of 1983.</p>
 
-<p>The green grove you now enter is a testimony to the ubiquity of MIDI in times past, as is the general aesthetic ambiance it partakes of. Websites in the <a href="https://fabled.day/before/">Before Times</a> often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser…</p>
+<p>Rather than transmitting actual audio, MIDI sends<em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression. This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
+
+<p>MIDI created a universal language that allowed keyboards, synthesizers, and other digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p>
+
+<p>Today, MIDI is <em>still</em> a core part of modern music technology, even if they’ve fallen out of favor on the World Wide Web. MIDI is a precise, language-like system for telling machines <em>how</em> to think about music, not <em>what</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from. Any instrument can interpret it, in infinite ways.</p>
+
+<p>Websites in early days of the World Wide Web often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser. I am trying to collect and curate all the major “classics” of MIDI music from my childhood here, as well as some other fun MIDI files I’ve been able to find.</p>
+
+
+
   <h2>Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute2">
   
   
