--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 
 
 
-  <h2>Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute2">
+  <h2>Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute">
   
   
   
