--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,11 @@
 
 <p>Rather than transmitting actual audio, MIDI sends<em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression. This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
 
-<p>MIDI created a universal language that allowed keyboards, synthesizers, and other digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p><img src="image/mage.png" class="mage">
+<p>MIDI created a universal language that allowed keyboards, synthesizers, and other digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p>
 
 <p>Today, MIDI is <em>still</em> a core part of modern music technology, even if they’ve fallen out of favor on the World Wide Web. MIDI is a precise, language-like system for telling machines <em>how</em> to think about music, not <em>what</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from. Any instrument can interpret it, in infinite ways.</p>
 
-<p>Websites in early days of the World Wide Web often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser. I am trying to collect and curate all the major “classics” of MIDI music from my childhood here, as well as some other fun MIDI files I’ve been able to find.</p>
+<p>Websites in early days of the World Wide Web often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser. I am trying to collect and curate all the major “classics” of MIDI music from my childhood here, as well as some other fun MIDI files I’ve been able to find.</p><img src="image/mage.png" class="mage">
 
 
 
