--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
 
   <h1>Well Met in Midsummer</h1>
-<img src="image/lantern.png" class="lantern"><p>Grab the lantern!</p><p>Enter the mystic, shady green forest of MIDI, overgrown with digitally-produced sounds. These wondrous little musical files adorned the independent websites of the 1990s and 2000s. Typing the shiny HTML tag <em>&lt;bgsound src=“url.mid”&gt;</em> would, <a href="https://midis.fandom.com/wiki/Bgsound_(Website_BGM)">in earlier browsers</a>, play a MIDI file in the background of a webpage directly. Even as Napster and MP3s gained speed, sites still existed for trading MIDI files, and I remember seeing them well into the 2000s.</p>
+<img src="image/lantern.png" class="lantern"><img src="image/mage.png" class="mage"><p>Grab the lantern!</p><p>Enter the mystic, shady green forest of MIDI, overgrown with digitally-produced sounds. These wondrous little musical files adorned the independent websites of the 1990s and 2000s. Typing the shiny HTML tag <em>&lt;bgsound src=“url.mid”&gt;</em> would, <a href="https://midis.fandom.com/wiki/Bgsound_(Website_BGM)">in earlier browsers</a>, play a MIDI file in the background of a webpage directly. Even as Napster and MP3s gained speed, sites still existed for trading MIDI files, and I remember seeing them well into the 2000s.</p>
 
 <p>Now? You rarely see anything about them <em>anywhere</em> unless you go looking for them. In fact, many sites <em>disallow</em> sharing them, and some browsers now find it difficult to play them. I’m not quite sure why this happened, being fuzzy on the particularities but heavily nostalgic about the MIDI files themselves. </p>
 
@@ -61,7 +61,7 @@
 
 <p>Today, MIDI is <em>still</em> a core part of modern music technology, even if they’ve fallen out of favor on the World Wide Web. MIDI is a precise, language-like system for telling machines <em>how</em> to think about music, not <em>what</em> the music sounds like. If audio is a recording of a singer’s voice, MIDI is the sheet music they’re reading from. Any instrument can interpret it, in infinite ways.</p>
 
-<p>Websites in early days of the World Wide Web often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser. I am trying to collect and curate all the major “classics” of MIDI music from my childhood here, as well as some other fun MIDI files I’ve been able to find.</p><img src="image/mage.png" class="mage">
+<p>Websites in early days of the World Wide Web often featured autoplaying MIDI files in the background. While this site (as of today) doesn’t have <em>any</em> autoplay, you can download plenty of MIDI from it, or just play them within your browser. I am trying to collect and curate all the major “classics” of MIDI music from my childhood here, as well as some other fun MIDI files I’ve been able to find.</p>
 
 
 
