--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
 <nav>
   <ul id="menu">
     <li>
-     <a href="#">What's MIDI?</a>
+     <a href="#Hark">Highlights</a>
     </li>
     <li>
      <a href="#">Legends</a>
     </li>
     <li>
-     <a href="#">Selection</a>
+     <a href="#">Vaults</a>
     </li>
         <li>
      <a href="#">Links</a>
@@ -65,7 +65,7 @@
 
 
 
-  <h2>Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute">
+  <h2 id="hark">Hark, and Listen Well!!</h2><img src="image/lute.png" class="lute">
   
   
   
