--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body>  <a href="#heather" class="topup">
+<body>   <a href="#wrapper" class="topup">
     <span>Back to top</span>
     <!-- aria-hidden="true" to hide the icon from screen readers -->
     <svg width="32" height="32" viewbox=" 0 0 24 24" aria-hidden="true">
@@ -127,7 +127,10 @@
 
 <footer>
   <p>Textual contents of this site, unless obvious or otherwise noted, are licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 license</a>.</p>
-</footer></div><script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
+</footer></div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
 <script src="spells.js"></script></body>
 
 
