--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   </a><div id="wrapper">
 <!-- this button appears near the bottom of the screen to take the visitor back to the top, when viewing the site on desktop-sized screens -->
 
-<header id="heather">
+<header>
   <h1>MIDI FOREST</h1>
   <button class="toggler" id="toggler">&#9776;</button>
 </header>
