--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <a href="#beginning" class="topup">
     <span>Back to top</span>
     <!-- aria-hidden="true" to hide the icon from screen readers -->
-    <svg width="32" height="32" viewbox=" 0 0 24 24" aria-hidden="true">
+    <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
       <path d="M5 12h14"/><path d="m12 5 7 7-7 7"/>
     </svg>
   </a>
