--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 
 </head>
-<body>
-    <a href="#beginning" class="topup">
+<body id="true">
+    <a href="#true" class="topup">
     <span>Back to top</span>
     <!-- aria-hidden="true" to hide the icon from screen readers -->
     <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
