--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 
   <div id="wrapper">
-              <a href="#wrapper" class="topup">
+              <a href="#beginning" class="topup">
     <span>Back to top</span>
     <!-- aria-hidden="true" to hide the icon from screen readers -->
     <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
