--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,10 @@
 </head>
 <body>
 
-
   <div id="wrapper">
-              <a href="#beginning" class="topup">
-    <span>Back to top</span>
-    <!-- aria-hidden="true" to hide the icon from screen readers -->
-    <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
-      <path d="M5 12h14"/><path d="m12 5 7 7-7 7"/>
-    </svg>
-  </a>
 <!-- this button appears near the bottom of the screen to take the visitor back to the top, when viewing the site on desktop-sized screens -->
 <header>
-  <h1 id="beginning">MIDI FOREST</h1>
+  <h1>MIDI FOREST</h1>
   <button class="toggler" id="toggler">&#9776;</button>
 </header>
 
@@ -130,7 +122,13 @@
 
 <footer>
   <p>Textual contents of this site, unless obvious or otherwise noted, are licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 license</a>.</p>
-</footer></div>
+</footer>          <a href="#wrapper" class="topup">
+    <span>Back to top</span>
+    <!-- aria-hidden="true" to hide the icon from screen readers -->
+    <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
+      <path d="M5 12h14"/><path d="m12 5 7 7-7 7"/>
+    </svg>
+  </a></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
