--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
   <div id="wrapper">
 <!-- this button appears near the bottom of the screen to take the visitor back to the top, when viewing the site on desktop-sized screens -->
-<header id="top">
+<header>
   <h1>MIDI FOREST</h1>
   <button class="toggler" id="toggler">&#9776;</button>
 </header>
@@ -37,7 +37,7 @@
   </ul>
 </nav>
 
-<main>
+<main id="top">
 
 
 <article>
