--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
 
 
 </head>
-<body>
+<body>  <a href="#wrapper" class="topup">
+    <span>Back to top</span>
+    <!-- aria-hidden="true" to hide the icon from screen readers -->
+    <svg width="32" height="32" viewbox=" 0 0 24 24" aria-hidden="true">
+      <path d="M5 12h14"/><path d="m12 5 7 7-7 7"/>
+    </svg>
+  </a>
 
   <div id="wrapper">
 <!-- this button appears near the bottom of the screen to take the visitor back to the top, when viewing the site on desktop-sized screens -->
@@ -36,13 +42,7 @@
     </li>
   </ul>
 </nav>
-          <a href="#top" class="topup">
-    <span>Back to top</span>
-    <!-- aria-hidden="true" to hide the icon from screen readers -->
-    <svg width="32" height="32" viewBox=" 0 0 24 24" aria-hidden="true">
-      <path d="M5 12h14"/><path d="m12 5 7 7-7 7"/>
-    </svg>
-  </a>
+
 <main id="top">
 
 <article>
