--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 
 </head>
-<body>  <a href="#wrapper" class="topup">
+<body id="top">  <a href="#top" class="topup">
     <span>Back to top</span>
     <!-- aria-hidden="true" to hide the icon from screen readers -->
     <svg width="32" height="32" viewbox=" 0 0 24 24" aria-hidden="true">
