--- a/public/index.html
+++ b/public/index.html
@@ -49,13 +49,13 @@
   <h1>Well Met in Midsummer</h1>
 <img src="image/lantern.png" class="lantern"><img src="image/mage.png" class="mage"><p>Grab the lantern!</p><p>Enter the mystic, shady green forest of MIDI, overgrown with digitally-produced sounds. These wondrous little musical files adorned the independent websites of the 1990s and 2000s. Typing the shiny HTML tag <em>&lt;bgsound src=“url.mid”&gt;</em> would, <a href="https://midis.fandom.com/wiki/Bgsound_(Website_BGM)">in earlier browsers</a>, play a MIDI file in the background of a webpage directly. Even as Napster and MP3s gained speed, sites still existed for trading MIDI files, and I remember seeing them well into the 2000s.</p>
 
-<p>Now? You rarely see anything about them <em>anywhere</em> unless you go looking for them. In fact, many sites <em>disallow</em> sharing them, and some browsers now find it difficult to play them. I’m not quite sure why this happened, being fuzzy on the particularities but heavily nostalgic about the MIDI files themselves. </p>
+<p>Now? You rarely see anything about them <em>anywhere</em> unless you go looking for them. In fact, many sites <em>disallow</em> sharing them, and some browsers now find it difficult to play them. I’m not quite sure why this happened. I'm fuzzy on the particularities but heavily nostalgic about the MIDI files themselves. </p>
 
 <p>Anyways, fair travelers… I’m going to be doing what I can to make these eerie, awkward musical entities available to you here, though. Lit by the glow of wizardly spells and moonrise over America Online’s ghostly ruins… Welcome, my dear musical seekers, to the MIDI Forest.</p>
 
 <p>MIDI itself stands for <em>musical instrument digital interface</em>. This American-Japanese file format developed in the 1980s as a way to help computers understand music. It’s usually credited to Dave Smith at Sequential Circuits and Ikutaro Kakehashi at Roland, with the first specification finalized at a trade show demonstration in January of 1983.</p>
 
-<p>Rather than transmitting actual audio, MIDI sends<em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression. This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
+<p>Rather than transmitting actual audio, MIDI sends <em>instructions.</em> These include which note to play, how loud, for how long, and with what kind of expression. This makes MIDI massively flexible, enabling one small file to control entire <em>orchestras</em> of virtual instruments without storing <em>any</em> sound data itself.</p>
 
 <p>MIDI created a universal language that allowed keyboards, synthesizers, and other digital audio workstations to interconnect seamlessly, regardless of brand. This standardization meant a musician could record a performance on a keyboard, edit it on a computer, and play it back using a completely different synth. </p>
 
