--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 <nav>
   <ul id="menu">
     <li>
-     <a href="#Hark">Highlights</a>
+     <a href="#hark">Highlights</a>
     </li>
     <li>
      <a href="#">Legends</a>
