--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,13 @@
   <div id="midicontainer">
     <h4>Canyon.MID</h4>
     <midi-player
-      src="/tunes/highlights/canyon.mid"
+      src="/tunes/highlights/Canyon.mid"
       sound-font
       visualizer="#myPianoRollVisualizer">
     </midi-player>
   </div>
+
+  <button id="randomMidi">Play Random MIDI</button>
 
 <p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood. <em>Canyon.MID</em>, for example, also known as “Trip Through the Grand Canyon,” was composed by George Stone to promote a now-defunct media application called Passport Designs.</p>
 
