--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
     </midi-player>
   </div>
 
-  <button id="randomMidi">Play Random MIDI</button>
+  <button id="randommidi">Play Random MIDI</button>
 
 <p>Hear well the <em>glorious</em> echoes of ages past! Certain <em>MID</em> files were included as part of the operating system back in the 1990s. These would quickly become fun fixtures of my childhood. <em>Canyon.MID</em>, for example, also known as “Trip Through the Grand Canyon,” was composed by George Stone to promote a now-defunct media application called Passport Designs.</p>
 
