--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
 </main>
 
 <footer>
-  <p>Textual contents of this site, unless obvious or otherwise noted, are licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 license</a>.</p>
+  <p>Text contents of this site, unless obvious or otherwise noted, are licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 license</a>. Site last updated on <span id="lastupdate">.</span>. You are visitor #<span id="hitcount">.</span>.</p>
 </footer></div><script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
 <script src="spells.js"></script><a href="#top" class="topup">
     <span>Back to top</span>
