--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
 
 <p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
 
-<h2>Links</h2>
+<h2>Paths Outwards</h2>
 
 <p>These are indie web or adjacent sites that feature or associate strongly with MIDI, and were therefore worth a mention!</p>
 
@@ -121,7 +121,7 @@
 	<li><a href="https://rabidrodent.neocities.org/midi/">Rabid Rodent</a></li>
 	<li><a href="https://midiarchive.neocities.org/">MIDI Archive</a></li>
 	<li><a href="https://hotlinecafe.com/">Fionn’s Hotline Café</a></li>
-	<li><a href="https://verymintywebsite.neocities.org/midifileswoo">Minty Website</a></li>
+	<li><a href="https://verymintywebsite.neocities.org/midifileswoo">A Very Minty Website</a></li>
 </ul>
 
 
