--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 <h2>Paths Outwards</h2>
 
 <p>These are indie web or adjacent sites that feature or associate strongly with MIDI, and were therefore worth a mention!</p>
-
+<img class="lantern" src="/image/crown.png">
 <ul>
 	<li><a href="https://beeks.cool/midis">Beeks.cool</a></li>
 	<li><a href="https://rabidrodent.neocities.org/midi/">Rabid Rodent</a></li>
