--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 
 <h2>Paths Outwards</h2>
 
-<img class="crown" src="/image/crown.png">
+<img class="lute" src="/image/crown.png">
 <p>These are indie web or adjacent sites that feature or associate strongly with MIDI, and were therefore worth a mention!</p>
 <ul>
 	<li><a href="https://beeks.cool/midis">Beeks.cool</a></li>
