--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
      <a href="#hark">Highlights</a>
     </li>
     <li>
-     <a href="#">Legends</a>
+     <a href="#legends">Legends</a>
     </li>
     <li>
      <a href="#">Vaults</a>
     </li>
         <li>
-     <a href="#">Links</a>
+     <a href="#links">Links</a>
     </li>
   </ul>
 </nav>
@@ -110,8 +110,19 @@
 <script src="https://cdn.jsdelivr.net/combine/npm/tone@14.7.58,npm/@magenta/music@1.23.1/es6/core.js,npm/focus-visible@5,npm/html-midi-player@1.5.0"></script>
 
 <p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
+<h2 id="legends">Legends of MIDI</h2>
 
-<h2>Paths Outwards</h2>
+<h3>Is MIDI supernatural?</h3>
+
+<p>Possibly. There is some anecdotal evidence that suggests MIDI files can function as covert spells meant to bewitch or otherwise enchant the listener. At very least, we know MIDI itself lends a <em>peculiar</em> ambiance to any situation, whether online or off. What does it <em>mean</em>? Who knows! <em>You</em> figure it out! Because I sure have no idea!</p>
+
+<h3>Is this Satire?</h3>
+
+<p>Is this site satire? Surely not the majority of it! Does the musical instrument digital interface file format really exist? Yes, and it definitely has some strange properties. <em>That said</em>, well, whether or not one <em>actually</em> believes MIDI files to be significant in any particular way is up for debate. And <em>yes</em>, it’s possible this site overstates the shimmery weirdness of MIDI slightly… cope…</p>
+
+
+
+<h2 id="links">Paths Outwards</h2>
 
 <img class="lute" src="/image/crown.png">
 <p>These are indie web or adjacent sites that feature or associate strongly with MIDI, and were therefore worth a mention!</p>
