--- a/public/index.html
+++ b/public/index.html
@@ -111,14 +111,35 @@
 
 <p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
 <h2 id="legends">Legends of MIDI</h2>
+<h3>The inaugural MIDI connection occurred on January 17, 1983.</h3>
+
+<p>This was between a Sequential Circuits Prophet-600 and a Roland Jupiter-6 at a National Association of Music Merchants trade show. This was both a test and a demonstration of the <em>concept</em> of MIDI, showing how MIDI allowed different brands to communicate with ease, finally. </p>
+
+<h3>Online, voiceless MIDI versions exist of many popular songs from the late 1990s.</h3>
+
+<p>These were shared in addition to, or in lieu of, the later (and more popular) MP3 versions which featured lyrics. Many of these songs are difficult to recognize, but plenty <em>do</em> sound just fine without a vocal track!</p>
+
+<h3>MIDI once provided the soundtrack to many late 1990s and even early 2000s websites.</h3>
+
+<p>The <em>&lt;bgsound src=“file.mid”&gt;</em> tag allowed webmasters to insert MIDI files to automatically play in the background of their websites. This was widely supported by the earlier browsers, but <em>quickly</em> fell out of favor, rendering the tag superfluous in all but the <em>oldest</em> of setups. </p>
+
+<h3>MIDI is actually difficult for modern browsers to play when compared to other sound files.</h3>
+
+<p>MP3, WAV, and similar tend to play within a browser fairly easily. Not so with MIDI, which is no longer as widely supported as it once was. Now, <a href="https://github.com/cifkao/html-midi-player">smarter people than</a> me have made workarounds available to play MIDI in the browser. </p>
+
+<h3>MIDI are extremely versatile.</h3>
+
+<p>MIDI uses the <em>same protocol</em> to command lighting rigs, fog machines, and even some fountain displays. Each special effects event functions almost like a musical <em>note</em> of sorts. These particular MIDI have become a part of theme park live displays and similar environments.</p>
 
 <h3>Is MIDI supernatural?</h3>
 
-<p>Possibly. There is some anecdotal evidence that suggests MIDI files can function as covert spells meant to bewitch or otherwise enchant the listener. At very least, we know MIDI itself lends a <em>peculiar</em> ambiance to any situation, whether online or off. What does it <em>mean</em>? Who knows! <em>You</em> figure it out! Because I sure have no idea!</p>
+<p>Possibly. There is some anecdotal evidence that suggests MIDI files can enchant the listener. At very least, we know MIDI itself lends a <em>peculiar</em> ambiance to any situation, whether online or off. What does it <em>mean</em>? Who knows! <em>You</em> figure it out! Because I sure have no idea!</p>
 
 <h3>Is this Satire?</h3>
 
 <p>Is this site satire? Surely not the majority of it! Does the musical instrument digital interface file format really exist? Yes, and it definitely has some strange properties. <em>That said</em>, well, whether or not one <em>actually</em> believes MIDI files to be significant in any particular way is up for debate. And <em>yes</em>, it’s possible this site overstates the shimmery weirdness of MIDI slightly… cope…</p>
+
+
 
 
 
