--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
 
 <h3>Is MIDI supernatural?</h3>
 
-<p>Possibly. There is some anecdotal evidence that suggests MIDI files can enchant the listener. At very least, we know MIDI itself lends a <em>peculiar</em> ambiance to any situation, whether online or off. What does it <em>mean</em>? Who knows! <em>You</em> figure it out! Because I sure have no idea!</p>
+<p>Possibly. There is some anecdotal evidence that suggests MIDI files are totally haunted at times. At very least, we know MIDI itself lends a <em>peculiar</em> ambiance to any situation, whether online or off. What does it <em>mean</em>? Who knows! <em>You</em> figure it out! Because I sure have no idea!</p>
 
 <h3>Is this Satire?</h3>
 
