--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,18 @@
 
 <p>MP3, WAV, and similar tend to play within a browser fairly easily. Not so with MIDI, which is no longer as widely supported as it once was. Now, <a href="https://github.com/cifkao/html-midi-player">smarter people than</a> me have made workarounds available to play MIDI in the browser. </p>
 
+<h3>MIDIs come in several distinct forms: a type 0, a type 1, and a type 2.</h3>
+
+<p>Type 0 files have every part of a song saved as one track, whereas Type 1 files have different parts saved as several tracks. There was a type 2 (which involved slamming multiple songs together), but not much ever came of it.</p>
+
+<h3>MIDI is still used in the music industry today.</h3>
+
+<p>I’m dreadfully fuzzy on all the details, but the format is still widely used for producing music, though it may no longer be popular on the World Wide Web. Programs and devices designed to create MIDI files are still out there, still kicking, after all, as are ample resources for playing them offline.</p>
+
+<h3>It’s believed that some wizards, enchantresses and sorcerers encode spells in MIDI.</h3>
+
+<p>An incantation is <em>typically</em> a spoken spell, but a MIDI is a kind of like an audio spell without words. Spontaneous paranormal phenomena have been known to manifest when listening to, and otherwise around, these strange little sound files…</p>
+
 <h3>MIDI are extremely versatile.</h3>
 
 <p>MIDI uses the <em>same protocol</em> to command lighting rigs, fog machines, and even some fountain displays. Each special effects event functions almost like a musical <em>note</em> of sorts. These particular MIDI have become a part of theme park live displays and similar environments.</p>
