--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
 
 <p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
 <h2 id="legends">Legends of MIDI</h2>
+<img src="image/book.png" class="book">
 <h3>The inaugural MIDI connection occurred on January 17, 1983.</h3>
 
 <p>This was between a Sequential Circuits Prophet-600 and a Roland Jupiter-6 at a National Association of Music Merchants trade show. This was both a test and a demonstration of the <em>concept</em> of MIDI, showing how MIDI allowed different brands to communicate with ease, finally. </p>
