--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,9 @@
 <p>Wondering how I managed to play a <em>.MID</em> file in your browser? It was tricky, and I don't understand it well, myself! For more information, see <a href="https://github.com/cifkao/html-midi-player" target="_blank">the <strong>html-midi-player</strong> repository</a> on GitHub, by people smarter than me...</p>
 <h2 id="legends">Legends of MIDI</h2>
 <img src="image/book.png" class="book">
+
+<p>Listen for these arcane legends of the deep, mystic history of MIDI and the luminous reaches of its soundscapes. Merely an audio format, or <em>something</em> more? <em>You</em> decide, and let the tunes cast their spells on you…</p>
+
 <h3>The inaugural MIDI connection occurred on January 17, 1983.</h3>
 
 <p>This was between a Sequential Circuits Prophet-600 and a Roland Jupiter-6 at a National Association of Music Merchants trade show. This was both a test and a demonstration of the <em>concept</em> of MIDI, showing how MIDI allowed different brands to communicate with ease, finally. </p>
