--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 <h2 id="legends">Legends of MIDI</h2>
 <img src="image/book.png" class="book">
 
-<p>Listen for these arcane legends of the deep, mystic history of MIDI and the luminous reaches of its soundscapes. Merely an audio format, or <em>something</em> more? <em>You</em> decide, and let the tunes cast their spells on you…</p>
+<p>Listen for these arcane legends of the deep, mystic history of MIDI and the luminous reaches of its soundscapes. Merely an audio format, or <em>something</em> more stranger? <em>You</em> decide, and let the tunes cast their spells on you…</p>
 
 <h3>The inaugural MIDI connection occurred on January 17, 1983.</h3>
 
