--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
 
 <ul>
   
-  <li><a href="/tunes/popular.zip" title="Popular Songs in MIDI Form">Look here for popular songs in MIDI form</a>. Some of these are a bit divorced in tune from their original inspirations, but most, like I said, are <em>listenable</em>.</li>
+  <li><a href="/tunes/popular.zip" title="Popular Songs in MIDI Form">Look here for popular songs in MIDI form</a>. Some of these are a bit different in tune from their original inspirations, but most, like I said, are <em>listenable</em>.</li>
 
   <li><a href="/tunes/television.zip" title="Television Tunes in MIDI">Download some television tunes here</a> in MIDI format. There aren't many in the archive yet, but I'm hoping to add more theme songs as I find them.</li>
 
