--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,10 @@
 
 <p>Is this site satire? Surely not the majority of it! Does the musical instrument digital interface file format really exist? Yes, and it definitely has some strange properties. <em>That said</em>, well, whether or not one <em>actually</em> believes MIDI files to be significant in any particular way is up for debate. And <em>yes</em>, it’s possible this site overstates the shimmery weirdness of MIDI slightly… cope…</p>
 <h2 id="vaults">Vaults</h2>
+
+
+<img src="image/brave.png" class="book">
+
 <p>Perhaps you&#39;d like some <em>extra</em> MIDI for whatever reason. I&#39;d like to provide as much of that as possible. So, I’m creating these vaults, where I’ll categorize and share MIDI I’m able to catch in the wild. Of these MIDI, some are good, some are bad, but most are <em>listenable</em>, and maybe you’ll find something <em>worth</em> listening to here. These, like the ones I shared above, came from a variety of different places. Most are recognizable as popular songs, but I can’t really point to one particular (MIDI) author of each file to credit. Many I found via Internet Archive and similar online media troves. I am slowly adding to this and slowly organizing it, but have a look at each selection…</p>
 
 <ul>
