--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
 <h2 id="vaults">Vaults</h2>
 
 
-<img src="image/brave.png" class="book">
+<img src="image/brave.png" class="brave">
 
 <p>Perhaps you&#39;d like some <em>extra</em> MIDI for whatever reason. I&#39;d like to provide as much of that as possible. So, I’m creating these vaults, where I’ll categorize and share MIDI I’m able to catch in the wild. Of these MIDI, some are good, some are bad, but most are <em>listenable</em>, and maybe you’ll find something <em>worth</em> listening to here. These, like the ones I shared above, came from a variety of different places. Most are recognizable as popular songs, but I can’t really point to one particular (MIDI) author of each file to credit. Many I found via Internet Archive and similar online media troves. I am slowly adding to this and slowly organizing it, but have a look at each selection…</p>
 
